--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/postgresql-9.3-1102.jdbc41.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Negocie Online/Documents/My Stuff/Projects/sd-bank-class-library/dependencies/postgresql-42.2.8.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
